--- a/index.html
+++ b/index.html
@@ -118,16 +118,19 @@
 						<li class="about-job card-set-item">
 							<a href="">
 								<img src="./images/box-1.jpg" alt="Фото лептопа на столе" width="370" height="294" />
+								<p class="about-title">Десктопные приложения</p>
 							</a>
 						</li>
-						<li class="card-set-item">
+						<li class="about-job card-set-item">
 							<a href="">
 								<img src="./images/box-2.jpg" alt="Фото мобильного телефона в руке" width="370" height="294" />
+								<p class="about-title">Мобильные приложения</p>
 							</a>
 						</li>
-						<li class="card-set-item">
+						<li class="about-job card-set-item">
 							<a href="">
 								<img src="./images/box-3.jpg" alt="Фото лептопа в руке" width="370" height="294" />
+								<p class="about-title">Дизайнерские решения</p>
 							</a>
 						</li>
 					</ul>
