--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<section class="sec-hero">
 				<div class="container">
 					<h1 class="hero">Эффективные решения для вашего бизнеса</h1>
-					<button class="button btn-order" type="button">Заказать услугу</button>
+					<button class="button btn-order" type="button" data-modal-open>Заказать услугу</button>
 				</div>
 			</section>
 
@@ -475,5 +475,15 @@
 				</div>
 			</div>
 		</footer>
+		<div class="backdrop is-hidden" data-modal>
+			<div class="modal">
+				<button class="modal-close" type="button" data-modal-close>
+					<svg width="18" height="18">
+						<use href="./images/icons.svg#icon-close"></use>
+					</svg>
+				</button>
+			</div>
+		</div>
+		<script src="./"></script>
 	</body>
 </html>
