--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,12 @@
 						<li class="portfolio-bg card-set-item">
 							<a class="portfolio-link" href="">
 								<img src="./images/portfolio-1.jpg" alt="Технокряк" width="370" height="294" />
-
+								<div class="portfolio-overlay">
+									<p class="portfolio-overlay-text">
+										Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
+										посетителю получить исчерпывающие сведения о компании или частном лице.
+									</p>
+								</div>
 								<div class="border">
 									<h2 class="projects">Технокряк</h2>
 									<p class="project-type">Веб-сайт</p>
