modal-no-scroll

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			rel="stylesheet"
 		/>
 	</head>
-	<body>
+	<body data-body>
 		<!--Хедер-->
 		<header class="header-bg container">
 			<div class="header-nav">
@@ -484,6 +484,6 @@
 				</button>
 			</div>
 		</div>
-		<script src="./"></script>
+		<script src="./js/modal.js"></script>
 	</body>
 </html>
