--- a/portfolio.html
+++ b/portfolio.html
@@ -66,12 +66,14 @@
 					<ul class="no-points card-set">
 						<li class="portfolio-bg card-set-item">
 							<a class="portfolio-link" href="">
-								<img src="./images/portfolio-1.jpg" alt="Технокряк" width="370" height="294" />
-								<div class="portfolio-overlay">
-									<p class="portfolio-overlay-text">
-										Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит
-										посетителю получить исчерпывающие сведения о компании или частном лице.
-									</p>
+								<div class="over">
+									<img src="./images/portfolio-1.jpg" alt="Технокряк" width="370" height="294" />
+									<div class="portfolio-overlay">
+										<p class="portfolio-overlay-text">
+											Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+											позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+										</p>
+									</div>
 								</div>
 								<div class="border">
 									<h2 class="projects">Технокряк</h2>
@@ -81,8 +83,15 @@
 						</li>
 						<li class="portfolio-bg card-set-item">
 							<a class="portfolio-link" href="">
-								<img src="./images/portfolio-2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294" />
-
+								<div class="over">
+									<img src="./images/portfolio-2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294" />
+									<div class="portfolio-overlay">
+										<p class="portfolio-overlay-text">
+											Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+											позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+										</p>
+									</div>
+								</div>
 								<div class="border">
 									<h2 class="projects">Постер New Orlean vs Golden Star</h2>
 									<p class="project-type">Дизайн</p>
@@ -91,8 +100,15 @@
 						</li>
 						<li class="portfolio-bg card-set-item">
 							<a class="portfolio-link" href="">
-								<img src="./images/portfolio-3.jpg" alt="Ресторан Seafood" width="370" height="294" />
-
+								<div class="over">
+									<img src="./images/portfolio-3.jpg" alt="Ресторан Seafood" width="370" height="294" />
+									<div class="portfolio-overlay">
+										<p class="portfolio-overlay-text">
+											Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+											позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+										</p>
+									</div>
+								</div>
 								<div class="border">
 									<h2 class="projects">Ресторан Seafood</h2>
 									<p class="project-type">Приложение</p>
@@ -101,8 +117,15 @@
 						</li>
 						<li class="portfolio-bg card-set-item">
 							<a class="portfolio-link" href="">
-								<img src="./images/portfolio-4.jpg" alt="Проект Prime" width="370" height="294" />
-
+								<div class="over">
+									<img src="./images/portfolio-4.jpg" alt="Проект Prime" width="370" height="294" />
+									<div class="portfolio-overlay">
+										<p class="portfolio-overlay-text">
+											Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+											позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+										</p>
+									</div>
+								</div>
 								<div class="border">
 									<h2 class="projects">Проект Prime</h2>
 									<p class="project-type">Маркетинг</p>
@@ -111,8 +134,15 @@
 						</li>
 						<li class="portfolio-bg card-set-item">
 							<a class="portfolio-link" href="">
-								<img src="./images/portfolio-5.jpg" alt="Проект Boxes" width="370" height="294" />
-
+								<div class="over">
+									<img src="./images/portfolio-5.jpg" alt="Проект Boxes" width="370" height="294" />
+									<div class="portfolio-overlay">
+										<p class="portfolio-overlay-text">
+											Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+											позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+										</p>
+									</div>
+								</div>
 								<div class="border">
 									<h2 class="projects">Проект Boxes</h2>
 									<p class="project-type">Приложение</p>
@@ -121,8 +151,15 @@
 						</li>
 						<li class="portfolio-bg card-set-item">
 							<a class="portfolio-link" href="">
-								<img src="./images/portfolio-6.jpg" alt="Inspiration has no Borders" width="370" height="294" />
-
+								<div class="over">
+									<img src="./images/portfolio-6.jpg" alt="Inspiration has no Borders" width="370" height="294" />
+									<div class="portfolio-overlay">
+										<p class="portfolio-overlay-text">
+											Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+											позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+										</p>
+									</div>
+								</div>
 								<div class="border">
 									<h2 class="projects">Inspiration has no Border</h2>
 									<p class="project-type">Веб-сайт</p>
@@ -131,8 +168,15 @@
 						</li>
 						<li class="portfolio-bg card-set-item">
 							<a class="portfolio-link" href="">
-								<img src="./images/portfolio-7.jpg" alt="Издание Limited Edition" width="370" height="294" />
-
+								<div class="over">
+									<img src="./images/portfolio-7.jpg" alt="Издание Limited Edition" width="370" height="294" />
+									<div class="portfolio-overlay">
+										<p class="portfolio-overlay-text">
+											Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+											позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+										</p>
+									</div>
+								</div>
 								<div class="border">
 									<h2 class="projects">Издание Limited Edition</h2>
 									<p class="project-type">Дизайн</p>
@@ -141,8 +185,15 @@
 						</li>
 						<li class="portfolio-bg card-set-item">
 							<a class="portfolio-link" href="">
-								<img src="./images/portfolio-8.jpg" alt="Проект LAB" width="370" height="294" />
-
+								<div class="over">
+									<img src="./images/portfolio-8.jpg" alt="Проект LAB" width="370" height="294" />
+									<div class="portfolio-overlay">
+										<p class="portfolio-overlay-text">
+											Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+											позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+										</p>
+									</div>
+								</div>
 								<div class="border">
 									<h2 class="projects">Проект LAB</h2>
 									<p class="project-type">Маркетинг</p>
@@ -151,8 +202,15 @@
 						</li>
 						<li class="portfolio-bg card-set-item">
 							<a class="portfolio-link" href="">
-								<img src="./images/portfolio-9.jpg" alt="Growing Business" width="370" height="294" />
-
+								<div class="over">
+									<img src="./images/portfolio-9.jpg" alt="Growing Business" width="370" height="294" />
+									<div class="portfolio-overlay">
+										<p class="portfolio-overlay-text">
+											Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+											позволит посетителю получить исчерпывающие сведения о компании или частном лице.
+										</p>
+									</div>
+								</div>
 								<div class="border">
 									<h2 class="projects">Growing Business</h2>
 									<p class="project-type">Приложение</p>
